--- a/index.html
+++ b/index.html
@@ -4,16 +4,20 @@
     <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
     <meta content="width=device-width; initial-scale=1.0; maximum-scale=1.0;  user-scalable=0;" name="viewport">
     <title>Michael Newton Portfolio</title>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="../css/main.css">
  
     <noscript>Please enable JavaScript to view the site in full :).</noscript>
 
 </head>
 <body class="theme-light" width = "device-width">
+  <div id="navigationTopBanner">
+      <button class="bttn">Dark</button>
+      <button class="homeBttn">Home</button>
+      <button class="contactBttn">Contact</button>
+      <button class="afterwerkBttn">Afterwerk Digital</button>
+  </div>
 
     <h1 class="sectionHeaders"> About Me </h1>
-
-
   
     <p class="aboutMe">
         Hi, my name is Michael and welcome to my website!
@@ -84,10 +88,6 @@
       <p class="skillSet">Databases</p>
     </ul>  
 
-  <div>
-  <button class="bttn">Dark</button>
-  </div>
-
-  <script src="app.js"></script>
+  <script src="../js/app.js"></script>
 </body>
 </html>
