--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <body class="theme-light" width = "device-width">
   <div id="navigationTopBanner">
       <button class="bttn">Dark</button>
-      <button class="homeBttn">Home</button>
-      <button class="contactBttn">Contact</button>
-      <button class="afterwerkBttn">Afterwerk Digital</button>
+      <a href="/" class="homeBttn">Home</a>
+      <a href="/Views/Pages/contactMe.html" class="contactBttn">Contact</a>
+      <a href="/Views/Pages/afterwerkDigital.html" class="afterwerkBttn">Afterwerk Digital</A>
   </div>
 
     <h1 class="sectionHeaders"> About Me </h1>
