Finished Project Sonar Page

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </script>
 
     <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
-    <meta content="width=device-width; initial-scale=1.0; maximum-scale=1.0;  user-scalable=0;" name="viewport">
+    <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0,  user-scalable=0" name="viewport">
     <title>Michael Newton Portfolio</title>
     <link rel="stylesheet" href="../css/main.css">
  
@@ -23,9 +23,9 @@
 <body class="theme-light" width = "device-width">
   <div id="navigationTopBanner">
       <button class="bttn">Dark</button>
+      <a href="/Views/Pages/afterwerkDigital.html" class="afterwerkBttn">Afterwerk Digital</A>
       <a href="/" class="homeBttn">Home</a>
       <a href="/Views/Pages/contactMe.html" class="contactBttn">Contact</a>
-      <a href="/Views/Pages/afterwerkDigital.html" class="afterwerkBttn">Afterwerk Digital</A>
   </div>
 
     <h1 class="sectionHeaders"> About Me </h1>
