Added New Project, Updated Formatting Using Flexbox

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 
         <h1 class="sectionHeaders"> About Me </h1>
 
+        <div id="textContainer">
         <p class="aboutMe">
           Hi, my name is Michael and welcome to my website!
           <br>
@@ -50,38 +51,38 @@
         <p class="aboutMe">
           I aspire to continue to learn and create. Any projects I have completed or I am working on will appear here so stay tuned!
         </p>
+      </div>
 
         <h1 class="sectionHeaders">Projects</h1>
 
+        <div id="projectContainer">
         <div id="projectBlock">
+          <div id="headerItem">
           <h2 class="headerBlock">Dungeon Run</p>
+          </div>
             <div id="imageBlock">
-              <a href="Views/Projects/DungeonRun/DungeonRun.html"><img src="Assets/Images/Dungeon_Run.png" ; width="200px" ; height="210px"></a>
+              <a href="Views/Projects/DungeonRun/DungeonRun.html"><img src="Assets/Images/Dungeon_Run.png"></a>
             </div>
         </div>
 
         <div id="projectBlock">
+          <div id="headerItem">
           <h2 class="headerBlock">Project: Sonar!</p>
+          </div>
             <div id="imageBlock">
-              <a href="Views/Projects/ProjectSonar/ProjectSonar.html"><img src="Assets/Images/Project_Sonar.png" ; width="200px" ; height="210px"></a>
+              <a href="Views/Projects/ProjectSonar/ProjectSonar.html"><img src="Assets/Images/Project_Sonar.png"></a>
             </div>
         </div>
 
         <div id="projectBlock">
-          <h2 class="headerBlock">Throw-Man</p>
+          <div id="headerItem">
+          <h2 class="headerBlock">Band Name Generator</p>
+          </div>
             <div id="imageBlock">
-              <img src="Assets/Images/image-coming-soon.jpg" ; width="200px" ; height="210px">
+              <a href="Views/Projects/BandNameGenerator/BandNameGenerator.html"><img src="Assets/Images/Band_Name_Generator_Title.png"></a>
             </div>
         </div>
-
-
-
-
-
-
-
-
-
+        </div>
 
         <h2 class="subHeaders"> My Skill Set:</h2>
         <ul>
